project('singularity-wallpapers', version: '0.1.0', meson_version: '>= 0.59.0')

install_data(
  'default.png',
  'singularity-aurora.svg',
  'singularity-epic.png',
  'singularity-grid.svg',
  'singularity-nebula.svg',
  'singularity-prospective.png',
  'singularity-topology.svg',
  'singularity-void.svg',
  'singularity-waves.svg',
  install_dir: get_option('datadir') / 'backgrounds' / 'singularity',
)
